# TinkyWiki-MCP

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/agents/: codewiki-architect.agent.md  codewiki-comparison.agent.md  codewiki-researcher.agent.md  codewiki-reviewer.agent.md  codewiki-synthesizer.agent.md  codewiki.agent.md
.github/skills/tinkywiki-usage/: SKILL.md
.github/workflows/: publish.yml
docs/: agents.html  app.js  architecture.html  configuration.html  demo.html  index.html  installation.html  release-notes.html  setup.html  skills.html  style.css  testing-guide.html  tools.html
tests/: agent_test_prompts.md  conftest.py  diagnose_search.py  scenario_prompt.md  scenario_v1.3.0_live.md  test_cache.py  test_config.py  test_dedup.py  test_deepwiki.py  test_fallback.py  test_github_api.py  test_helpers.py  test_keyword_integration.py  test_parser.py  test_rate_limit.py  test_request_indexing.py  test_resolver.py  test_session_pool.py  test_stealth.py  test_tools.py  test_types.py
tinkywiki_mcp/: __init__.py  __main__.py  browser.py  cache.py  config.py  dedup.py  deepwiki.py  fallback.py  github_api.py  parser.py  rate_limit.py  resolver.py  server.py  session_pool.py  stealth.py  types.py
tinkywiki_mcp/tools/: __init__.py  _helpers.py  contents.py  request_indexing.py  search.py  structure.py  topics.py
