[project]
name = "tinkywiki-mcp"
version = "1.4.0"
description = "MCP server providing AI-powered access to Google TinkyWiki for open-source repositories"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Cloudmeru" },
]
keywords = ["mcp", "tinkywiki", "google", "documentation", "ai", "code-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp",
    "pydantic>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "cachetools>=5.3",
]

[project.urls]
Homepage = "https://github.com/Cloudmeru/TinkyWiki-MCP"
Repository = "https://github.com/Cloudmeru/TinkyWiki-MCP"
Issues = "https://github.com/Cloudmeru/TinkyWiki-MCP/issues"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-mock", "pytest-asyncio"]

[project.scripts]
tinkywiki-mcp = "tinkywiki_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tinkywiki_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
